@@ -1,5 +1,8 @@
 =STANDORTE=
 
 ==TODO==
-* Semesterferien? Oeffnungszeiten
-* ist geoeffnet?
+* Besonderheiten bei Oeffnungszeiten
+** Semesterferien
+** Freitext ... (FLUIDs sache)
+
+* Google Maps integration
