@@ -1,3 +1,7 @@
+2010-12-21 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
+	* Oeffnungszeiten Check
+	* Darstellung geoeffnet oder geschlossen
+
 2010-12-17 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
 	* Manual erstellt
 	* Abwaertskompatibilitaet zu TYPO3 v4.4.x
